<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ePotager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_accueil">EPotager</string>
    <string name="titreProfil">Profil</string>
    <string name="title_activity_geoloc">Geolocalisation</string>
    <string name="title_activity_infos">Infos</string>
    <string name="title_activity_en_ce_moment">EnCeMoment</string>
    <string name="title_activity_cgu__infos">CGU_Infos</string>
    <string name="texteRayon">Rayon</string>
    <string name="titreGeoloc">Géolocalisation</string>
    <string name="rayon">100km</string>
    <string name="texteFruits">Fruits</string>
    <string name="texteLegumes">Légumes</string>
    <string name="texteDispo">Disponible</string>
    <string name="nomTexte">Nom à recup </string>
    <string name="prenomTexte">Prenom à recup</string>
    <string name="nom">Nom </string>
    <string name="prenom">Prenom</string>
    <string name="adresse">Adresse</string>
    <string name="description">Description</string>
    <string name="commentaire">Avis et commentaire</string>
    <string name="imageProfil">Image de profil</string>
    <string name="auteurCommentaire1">Commentaire</string>
    <string name="auteurCommentaire2">Commentaire</string>
    <string name="contenuCommentaire1">AffichageCommentaireActivity</string>
    <string name="contenuCommentaire2">AffichageCommentaireActivity</string>
    <string name="title_activity_tchat">Tchat</string>
    <string name="title_activity_affichage_commentaires">Commentaires</string>
    <string name="hintSaisieCommentaire">Entrez un commentaire ici</string>
    <string name="imageDial">Image bouton dial</string>
    <string name="imageLoc">Image bouton loc</string>
    <string name="voir_plus_de_commentaire">Voir plus de commentaires</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_activity_dialog_confirmation_inscription">DialogConfirmationInscription</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="title_activity_editer_profil">EditerProfil</string>
    <string name="informationChoixJardinier">Choisir votre type de profil</string>
    <string name="radioChoixConsommateur">Consommateur</string>
    <string name="radioChoixProducteur">Producteur</string>
    <string name="title_activity_message_texte">MessageTexte</string>
    <string name="boutonChargerPhotoProfil">charger photo profil</string>
    <string name="boutonChargerImageGalery">charger image galerie</string>
    <string name="boutonSupprimerPhotoGalery">Supprimer les photos</string>
    <string name="modifierProfil">Editer</string>
    <string name="title_activity_upload">MessageTexte</string>
    <string name="title_activity_dialogue_tchat">DialogueTchat</string>
    <string name="title_activity_tchat_adapter">TchatAdapter</string>

</resources>