<?xml version="1.0" encoding="utf-8"?>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:addStatesFromChildren="false"
            android:background="#3C99DC"
            android:clipToPadding="false"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:layout_weight="1"
            android:splitMotionEvents="false"
            tools:context=".Geolocalisation" >
    
        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/haut" />

    <ImageButton
        android:id="@+id/boutonBack"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <ImageButton
        android:id="@+id/boutonHome"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/home" />
    
    <TextView
        android:id="@+id/titre"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/boutonBack"
        android:layout_centerHorizontal="true"
        android:text="@string/titreGeoloc" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="120dp"
        class="com.google.android.gms.maps.MapFragment" />

    <SeekBar
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="57dp"
        android:max="100"
        android:progress="1" />

    <TextView
        android:id="@+id/textRayon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@+id/distance"
        android:layout_alignLeft="@+id/boutonBack"
        android:textColor="#fff"
        android:text="@string/texteRayon" />

    <TextView
        android:id="@+id/rayon"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:layout_alignTop="@+id/distance"
        android:layout_alignRight="@+id/boutonHome"
        android:textColor="#fff"
        android:text="@string/rayon" />

    <TextView
        android:id="@+id/texteFruits"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rayon"
        android:layout_alignLeft="@+id/boutonBack"
        android:textColor="#fff"
        android:text="@string/texteFruits" />

    <TextView
        android:id="@+id/texteLegumes"
 		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rayon"
        android:layout_alignLeft="@+id/boutonHome"
        android:textColor="#fff"
        android:text="@string/texteLegumes" />

</RelativeLayout>
